@@ -1,5 +1,8 @@
 2004-09-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/hairpin.cc (print): check columns of bounds, not bounds themselves.
+	(print): robustify bound-padding lookup.
+
 	* lily/*: ly_c[ad]+r -> scm_XXX , ly_c_pair_p -> scm_is_pair.
 
 	* scripts/lilypond-book.py (Compile_error.process_include): catch
